--- a/AUTHORS
+++ b/AUTHORS
@@ -2,4 +2,6 @@
 
 
 Abdulrhman Alidrisy <a.alidrisy6@gmail.com>
-Ahmed Abd El Hamed <ahmed.abdelhameed1706@gmail.com> 
+Ahmed Abd El Hamed <ahmed.abdelhameed1706@gmail.com>
+Ikechukwu Godwin <ikechukwugodwin22@yahoo.com>
+Ofiare Khoko <williamkhoko@yahoo.com> 
